 - Fixed NPE in Guard when no challenge response is set. Reported by Dave Pawson.
 - Integrated patches and bug fixes (few NPEs) detected by FindBugs. Contributed by Piyush Purang.

[API changes]
 - Moved org.restlet.data.Result to org.restlet.resource.Result (deprecation used).
 - Replaced ConnectorService.get*Protocols() methods by just getClientProtocols() and getServerProtocols().

[Enhancements] 
 - HTTP calls now try to use the channel aspect of a representation before its stream aspect. Suggested by Lars Heuer.
 - Added source path to JSON external plugin. Suggested by Chris Grindstaff.
 - Added support for FindBugs in the Ant build script. Suggested by Piyush Purang.
 - Added "verify" target to build script to provide a shorter cycle for developpers. Contributed by Piyush Purang.
 - Slightly updated Eclipse code template file. Please re-import it if possible.
 - NRE now checks that each application has the required connectors available when starting it.
  
1.0 beta 20 (2006-11-08)
[Bugs fixed]
 - Fixed bug causing the ServerServlet to create an extra HTTP server connector if one is available on the classpath. Reported by Sean Landis.
 - Fixed bug in StatusFilter, method dohandle() renamed to doHandle().
 - Removed getStatusCode() and getReasonPhrase() methods in ServletCall hiding the actual value set. Reported by Sean Landis.
 - Fixed bug preventing the restart of a Jetty 6 connector. Added RestartTestCase. Reported by Piyush Purang.
 - Fixed bug in AWS authentication algorithm if no AMZ_* header present. Reported by Mikkel Jensen.
 - Patched Simple connector to not return a "Content-length" header when size is 0.
 - Bug bug in the Simple connector causing a "Transfer-Encoding: chunked" header to be returned even if no entity was present. May be the cause of problems with the Safari browser.
 - Fixed issue with StringRepresentation wrongly computing its length in certain cases. Reported by Richard G.