@@ -15,7 +15,8 @@ Changes log
 [API changes]
  - Moved org.restlet.data.Result to org.restlet.resource.Result (deprecation used).
  - Replaced ConnectorService.get*Protocols() methods by just getClientProtocols() and getServerProtocols().
-
+ - Refactored the TunnelService a bit and added better Javadocs.
+ 
 [Enhancements] 
  - HTTP calls now try to use the channel aspect of a representation before its stream aspect. Suggested by Lars Heuer.
  - Added source path to JSON external plugin. Suggested by Chris Grindstaff.
